# vulkan-with-mlkit-pose

./: .gitignore  .gitmodules
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/lunarian_forge/vulkan_tracking/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/lunarian_forge/vulkan_tracking/: MainActivity.kt  PoseAnalyzer.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/lunarian_forge/vulkan_tracking/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Desktop/VulkanTrackingApp/: CMakeLists.txt
Desktop/VulkanTrackingApp/src/: VulkanTrackingApp.cpp  VulkanTrackingApp.h
Desktop/VulkanTrackingApp/src/PoseServer/: PoseServer.cpp  PoseServer.h
